[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cvefind"
version = "0.1.0"
description = "Find CVE IDs for a package name using multiple advisory sources."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "pyyaml>=6.0.0",
  "typer>=0.12.0",
]

[project.scripts]
cvefind = "cvefind.cli:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
